WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280167
[Cleanup] BoxGeometryUpdater does not need to hold on to BoxTree
https://bugs.webkit.org/show_bug.cgi?id=280167
Summary
[Cleanup] BoxGeometryUpdater does not need to hold on to BoxTree
alan
Reported
2024-09-22 19:56:00 PDT
ssia
Attachments
Patch
(8.16 KB, patch)
2024-09-22 19:56 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(8.22 KB, patch)
2024-09-23 13:57 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-09-22 19:56:53 PDT
Created
attachment 472636
[details]
Patch
alan
Comment 2
2024-09-23 13:57:09 PDT
Created
attachment 472657
[details]
[fast-cq]Patch
EWS
Comment 3
2024-09-23 19:29:57 PDT
Committed
284130@main
(97db169b5016): <
https://commits.webkit.org/284130@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472657
[details]
.
Radar WebKit Bug Importer
Comment 4
2024-09-23 19:31:48 PDT
<
rdar://problem/136550218
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug