BoxGeometryUpdater does not need to hold on to BoxTree https://bugs.webkit.org/show_bug.cgi?id=280167

Reviewed by Antti Koivisto.

* Source/WebCore/layout/integration/LayoutIntegrationFormattingContextLayout.cpp:
(WebCore::LayoutIntegration::layoutWithFormattingContextForBox):
* Source/WebCore/layout/integration/inline/LayoutIntegrationBoxGeometryUpdater.cpp:
(WebCore::LayoutIntegration::BoxGeometryUpdater::BoxGeometryUpdater):
(WebCore::LayoutIntegration::BoxGeometryUpdater::setGeometriesForLayout):
(WebCore::LayoutIntegration::BoxGeometryUpdater::setGeometriesForIntrinsicWidth):
(WebCore::LayoutIntegration::BoxGeometryUpdater::updateInlineContentConstraints):
(WebCore::LayoutIntegration::BoxGeometryUpdater::rootLayoutBox const):
(WebCore::LayoutIntegration::BoxGeometryUpdater::rootRenderer const):
(WebCore::LayoutIntegration::BoxGeometryUpdater::rootLayoutBox): Deleted.
* Source/WebCore/layout/integration/inline/LayoutIntegrationBoxGeometryUpdater.h:
(WebCore::LayoutIntegration::BoxGeometryUpdater::boxTree): Deleted.
(WebCore::LayoutIntegration::BoxGeometryUpdater::boxTree const): Deleted.
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::LineLayout):

Canonical link: https://commits.webkit.org/284130@main